--- a/src/style.css
+++ b/src/style.css
@@ -1,2 +1,13 @@
 :root {
+    --primary-color: #007bff;
+    --secondary-color: #6c757d;
+    --background-color: #f8f9fa;
+
+    --margin: 15px;
+}
+
+html, body{
+    padding: 0;
+    margin: 0;
+    background-color: var(--background-color);
 }
