--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 :root {
     --primary-color: #007bff;
     --secondary-color: #6c757d;
-    --background-color: #f8f9fa;
+    --background-color: #141D2F;
+    --text-color:#E8E3E3;
 
     --margin: 15px;
 }
@@ -10,4 +11,5 @@ html, body{
     padding: 0;
     margin: 0;
     background-color: var(--background-color);
+    color:var(--text-color);
 }
