--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,8 @@
     --primary-color: #007bff;
     --secondary-color: #6c757d;
     --background-color: #141D2F;
-    --highlightg-color: #00bee8;
+    --highlightg-color: #1cdae6;
+    --highlightg-color-hover: #4b47ff;
     --text-color:#E8E3E3;
 
     --margin: 15px;
@@ -33,10 +34,43 @@ a{
     text-decoration: none;
 }
 
+hr {
+    background: var(--highlightg-color);
+    height: 3px;
+    border: none;
+}
+
+button {
+    box-shadow: 4px 4px 4px 0px #00000040;
+    width: Hug (107px);
+    height: Hug (58px);
+    padding: 15px 30px 15px 30px;
+    border-radius: 10px;
+    gap: 10px;
+    color: white;
+    font-size: 1.5rem;
+    border: 1px;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+
+    &:hover {
+        background-color: var(--highlightg-color-hover);
+        padding: 15px 40px 15px 40px;
+    }
+}
+
 .pointer{
     cursor: pointer;
 }
 
 .coloriezed {
     color: var(--primary-color);
+}
+
+.primary {
+    background-color: var(--highlightg-color);
+}
+
+.secondary {
+    background-color: var(----highlightg-color-hover);
 }
